@@ -1,14 +1,13 @@
 # Copyright (c) 2018 Patricio Cubillos and contributors.
 # puppies is open-source software under the MIT license (see LICENSE).
 
-from .gaussian import *
-#from .sigrej    import *
+from .gaussian   import *
+from .least_asym import *
 
-from .gaussian import __all__ as gall
-#from .sigrej    import __all__
-#stats_all += __all__
+from .gaussian   import __all__ as gall
+from .least_asym import __all__ as aall
 
-__all__ = gall
+__all__ = gall + aall
 
 
 # Clean up top-level namespace--delete everything that isn't in __all__
